// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should render with children 1`] = `
<div
  className="application"
>
  <p>
    Some content
  </p>
  <Connect(AlertPanel) />
</div>
`;

exports[`Application should render with loader 1`] = `
<div
  className="application"
>
  <div
    className="c-loader"
  />
  <Connect(AlertPanel) />
</div>
`;
